--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#007AFF" />
     <link rel="manifest" href="/manifest.json" />
+
+    <link rel="apple-touch-icon" sizes="192x192" href="/touch-icon.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Tripad">
     <title>Tripad</title>
   </head>
   <body>
